GNOME Bugzilla – Bug 769193
[REGRESSION] in NLE we are decoding both audio and video streams even if the we only care about one of those
Last modified: 2016-07-26 16:52:16 UTC
This used to work (I am sure it was working when we worked on NLE so around 1.4), the regression must be either in decodebin or in NLE/GES.
Sure it wasn't 0.10? ;) I think decodebin has had the issue that it decodes unlinked streams for all of 1.x, unless you have special-handling with autoplug-continue (which ges doesn't seem to have). Note that it might also depend on the container format, at least one demuxer has some nasty not-linked=deactivate stream code.
(Unless you mean higher-level, that nle sets up a decodebin for video even if you don't care about video in nle.)
Created attachment 332145 [details] [review] uri-sources: Make sure to set decodebin 'caps' property Fixes a regression where we decode streams twice, this was introduced when we started creating NLE object at GESTrackElement construct time. Fixes
Attachment 332145 [details] pushed as 577938c - uri-sources: Make sure to set decodebin 'caps' property